# pinn

./: .gitignore  1_Forward_Euler.py  2_pinn_simulate.py  3_pinn_data.py  4_pinn_unknown_parameters.py  5_pinn_unknown_parameter_auto_weight.py  README.md  pyproject.toml
